<resources>
    <string name="app_name">Illuminate</string>

    <!-- Strings related to login -->
    <string name="prompt_email" color="@color/colorAccent">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in/Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="loginIcon">Icon</string>
    <string name="title_activity_music">Illuminate</string>
    <string name="title_songs">Songs</string>
    <string name="title_artists">Artists</string>
    <string name="title_albums">Albums</string>
    <string name="title_activity_copy">CopyActivity</string>
</resources>
